no commit message

--- a/Languages/Metaprogramming/Parsing/Specific_language/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/Specific_language/JavaScript/estree.format.txt
@@ -66,7 +66,8 @@ EXPR_STATEMENT                    #Statement with single EXPR.
                                              \=+===============================+=/
 
 
-DECLARATION                       #Child of STATEMENT. Parent of VARIABLE_DECLARATION, FUNCTION_DECLARATION, CLASS_DECLARATION
+DECLARATION                       #Child of STATEMENT. Parent of VARIABLE_DECLARATION, FUNCTION_DECLARATION, CLASS_DECLARATION,
+                                  #TS_TYPE_ALIAS_DECLARATION, TS_ENUM_DECLARATION, TS_INTERFACE_DECLARATION
 
 QUAL VAR = VAL, ...               #Child of DECLARATION, type 'VariableDeclaration':
                                   #  - declarations VARIABLE_DECLARATOR_ARR (type 'VariableDeclarator'):
@@ -75,7 +76,7 @@ QUAL VAR = VAL, ...               #Child of DECLARATION, type 'VariableDeclarati
                                   #  - kind 'var|let|const'
 
 lvalues                           #PATTERN. Parent of IDENTIFIER, MEMBER_EXPR, OBJ_PATTERN, ARR_PATTERN, REST_ELEMENT,
-                                  #ASSIGNMENT_PATTERN
+                                  #ASSIGNMENT_PATTERN, TS_PARAMETER_PROPERTY
 
 VAR                               #Child of EXPR+PATTERN, type 'Identifier':
                                   #  - name STR
@@ -196,9 +197,9 @@ for [await] (VAR of VAL) {...}    #Child of STATEMENT, type 'ForOfStatement':
                                   #  - await BOOL
 
 break [LABEL]                     #Child of STATEMENT, type 'BreakStatement':
-                                  #  - [label IDENFIFIER]
+                                  #  - [label IDENTIFIER]
 continue [LABEL]                  #Child of STATEMENT, type 'ContinueStatement':
-                                  #  - [label IDENFIFIER]
+                                  #  - [label IDENTIFIER]
 
 with (...) {...}                  #Child of STATEMENT, type 'WithStatement':
                                   #  - object EXPR
@@ -235,8 +236,8 @@ debugger                          #Child of STATEMENT, type 'DebuggerStatement'
                                              \=+===============================+=/
 
 
-STR|BOOL|NUM|null|REGEXP          #Child of EXPR, type 'Literal':
-                                  #  - value STR|BOOL|NUM|null|REGEXP
+STR|BOOL|NUM|BIGINT|null|REGEXP   #Child of EXPR, type 'Literal':
+                                  #  - value STR|BOOL|NUM|BIGINT|null|REGEXP
                                   #  (REGEXP only)
                                   #  - regex:
                                   #     - pattern STR
@@ -392,13 +393,199 @@ import("MDL")                     #Type 'Import', used in CALLEXPRESSION
 
                                              /=+===============================+=\
                                             /  :                               :  \
+                                            )==:        TYPESCRIPT/FLOW        :==(
+                                            \  :_______________________________:  /
+                                             \=+===============================+=/
+
+
+TYPE                              #Type 'typeAnnotation' (TypeScript|Flow)
+                                  #TYPE_VAR or TYPE_EXPR
+
+VAR: TYPE
+function (): TYPE {}
+...VAR: TYPE                      #TYPE assertion
+{...}: TYPE                       #On IDENTIFIER|FUNC|REST_ELEMENT|OBJ_PATTERN|ARR_PATTERN:
+[...]: TYPE                       #  - [typeAnnotation TYPE_ANNOTATION]
+
+
+                                             /=+===============================+=\
+                                            /  :                               :  \
                                             )==:          TYPESCRIPT           :==(
                                             \  :_______________________________:  /
                                              \=+===============================+=/
 
 
-VAR: TYPE
-...VAR: TYPE
-function (): TYPE {}              #On IDENTIFIER|FUNC|OBJ_PATTERN|ARR_PATTERN|RESTELEMENT:
-{...}: TYPE                       #  - [typeAnnotation TYPE_ANNOTATION]
-[...]: TYPE                       #For TypeScript
+UNOFFICIAL ==>                    #But used by @babel/parser and @typescript-eslint/typescript-estree
+                                  #Below are TYPEs from @babel/parser. Differences with @typescript-eslint/typescript-estree:
+                                  #  - 'TSExpressionWithTypeArguments' -> 'TSClassImplements|TSInterface'
+                                  #  - TS_FUNC_TYPE|TS_CONSTRUCTOR_TYPE|TS_METHOD_SIGNATURE|TS_CALL_SIGNATURE_DECLARATION|TS_CONSTRUCT_SIGNATURE_DECLARATION:
+                                  #     - 'parameters' -> 'params'
+                                  #     - 'typeAnnotation' -> 'returnType'
+                                  #  - TS_TYPE_PARAMETER.name: STR -> IDENTIFIER
+
+TYPE                              #TS_TYPE. TypeScript TYPE
+                                  #Parent of TS_TYPE_REFERENCE, TS_TYPE_QUERY, TS_CONDITIONAL_TYPE, TS_TYPE_OPERATOR,
+                                  #TS_INDEXED_ACCESS_TYPE, TS_MAPPED_TYPE, TS_*_KEYWORD, TS_LITERAL_TYPE, TS_OPTIONAL_TYPE,
+                                  #TS_TYPE_LITERAL, TS_EXPRESSION_WITH_TYPE_ARGUMENTS, TS_FUNCTION_TYPE, TS_CONSTRUCTOR_TYPE,
+                                  #TS_ARRAY_TYPE, TS_REST_TYPE, TS_TUPLE_TYPE, TS_UNION_TYPE, TS_INTERSECTION_TYPE
+
+...: TYPE                         #TS_TYPE_ANNOTATION. TypeScript TYPE assertion:
+                                  #  - typeAnnotation TS_TYPE
+
+TYPE_VAR                          #TS_ENTITY_NAME. Child of IDENTIFIER, for a TS_TYPE.
+                                  #TYPE_VAR identifier itself.
+
+TYPE_VAR                          #Child of TS_TYPE, type 'TSTypeReference':
+                                  #  - typeName TS_ENTITY_NAME
+                                  #TYPE_VAR reference.
+
+[declare] type TYPE_VAR = TYPE2   #Child of DECLARATION, type 'TSTypeAliasDeclaration':
+                                  #  - id IDENTIFIER
+                                  #  - typeAnnotation TS_TYPE
+                                  #  - [declare BOOL]
+
+typeof VAR                        #Child of TS_TYPE, type 'TSTypeQuery':
+                                  #  - exprName TS_ENTITY_NAME
+
+TYPE extends TYPE2 ? TYPE3 : TYPE4#Child of TS_TYPE, type 'TSConditionalType':
+                                  #  - checkType TS_TYPE (TYPE)
+                                  #  - extendsType TS_TYPE (TYPE2)
+                                  #  - trueType TS_TYPE (TYPE3)
+                                  #  - falseType TS_TYPE (TYPE4)
+
+keyof TYPE
+unique symbol                     #Child of TS_TYPE, type 'TSTypeOperator':
+readonly TYPE[]                   #  - typeAnnotation TS_TYPE
+readonly [TYPE,...]               #  - operator: 'keyof|unique|readonly'
+
+TYPE[TYPE2]                       #Child of TS_TYPE, type 'TSIndexedAccessType':
+                                  #  - objectType TS_TYPE (TYPE)
+                                  #  - indexType TS_TYPE (TYPE2)
+
+{ [T in TYPE]: TYPE2 }            #Child of TS_TYPE, type 'TSMappedType':
+                                  #  - typeParameter TS_TYPE_PARAMETER (T in TYPE)
+                                  #  - [typeAnnotation TS_TYPE] (TYPE2)
+                                  #readonly|optional are not supported by current parsers (but do not throw)
+
+any                               #Child of TS_TYPE, type 'TSAnyKeyword'
+unknown                           #Child of TS_TYPE, type 'TSUnknownKeyword'
+never                             #Child of TS_TYPE, type 'TSNeverKeyword'
+undefined                         #Child of TS_TYPE, type 'TSUndefinedKeyword'
+null                              #Child of TS_TYPE, type 'TSNullKeyword'
+void                              #Child of TS_TYPE, type 'TSVoidKeyword'
+boolean                           #Child of TS_TYPE, type 'TSBooleanKeyword'
+number                            #Child of TS_TYPE, type 'TSNumberKeyword'
+string                            #Child of TS_TYPE, type 'TSStringKeyword'
+bigint                            #Child of TS_TYPE, type 'TSBigIntKeyword'
+symbol                            #Child of TS_TYPE, type 'TSSymbolKeyword'
+object                            #Child of TS_TYPE, type 'TSObjectKeyword'
+
+BOOL|NUM|STR|BIGINT               #Child of TS_TYPE, type 'TSLiteralType':
+                                  #  - literal LITERAL
+
+{ VAR?[: TYPE],... }
+{ [T in TYPE]?: TYPE2 }           #On IDENTIFIER|TS_PROPERTY_SIGNATURE|TS_MAPPED_TYPE|TS_METHOD_SIGNATURE|TS_DECLARE_METHOD:
+(VAR?[: TYPE],...) => TYPE2       #  - [optional BOOL]
+
+[TYPE?,...]                       #Child of TS_TYPE, type 'TSOptionalType':
+                                  #  - typeAnnotation TS_TYPE
+
+[declare] [const] enum ENUM {}    #Child of DECLARATION, type 'TSEnumDeclaration':
+                                  #  - [declare BOOL]
+                                  #  - [const BOOL]
+                                  #  - id IDENTIFIER (ENUM)
+                                  #  - members TS_ENUM_MEMBER_ARR
+  NAME [= EXPR]                   #Type 'TSEnumMember':
+                                  #  - id IDENTIFER|LITERAL
+                                  #  - [initializer EXPR]
+
+TS_TYPE_ELEMENT                   #TS_PROPERTY_SIGNATURE|TS_INDEX_SIGNATURE|TS_METHOD_SIGNATURE|TS_CALL_SIGNATURE_DECLARATION|TS_CONSTRUCT_SIGNATURE_DECLARATION
+
+{ ... }                           #Child of TS_TYPE, type 'TSTypeLiteral':
+                                  #  - members TS_TYPE_ELEMENT_ARR
+  VAR: TYPE [= VAL]               #Type 'TSPropertySignature':
+                                  #  - key EXPR
+                                  #  - [computed BOOL] (when key is [STR])
+                                  #  - [typeAnnotation TS_TYPE_ANNOTATION]
+                                  #  - [initializer EXPR]
+  [VAR: TYPE2]: TYPE              #Type 'TSIndexSignature':
+                                  #  - parameters IDENTIFIER_ARR (VAR: TYPE2, with single element, an IDENTIFIER with type assertion)
+                                  #  - [typeAnnotation TS_TYPE_ANNOTATION] (TYPE)
+
+class CLASS {}                    #
+  constructor                     #Child of PATTERN. Type 'TSParameterProperty'
+   (QUAL VAR[?]: TYPE,...)        #  - parameter PATTERN
+                                  #  - [accessibility 'public|protected|private']
+                                  #  - [readonly BOOL]
+  public|protected|private VAR    #On CLASS_PROPERTY|CLASS_METHOD|TS_DECLARE_METHOD:
+                                  #  - [accessibility 'public|protected|private']
+abstract class ...                #On CLASS_DECLARATION:
+                                  #  - [abstract BOOL]
+  abstract VAR|FUNC()             #On CLASS_PROPERTY|CLASS_METHOD|TS_DECLARE_METHOD:
+                                  #  - [abstract BOOL]
+
+[declare] interface INTERFACE {}  #Child of DECLARATION, type 'TSInterfaceDeclaration':
+                                  #  - [declare BOOL]
+                                  #  - id IDENTIFIER
+                                  #  - [extends TS_EXPRESSION_WITH_TYPE_ARGUMENTS_ARR]
+                                  #  - body TS_INTERFACE_BODY:
+                                  #     - body TS_TYPE_ELEMENT_ARR
+
+implements|extends PARENT         #Child of TS_TYPE, type 'TSExpressionWithTypeArguments'
+                                  #  - expression EXPR (PARENT)
+                                  #On CLASS:
+                                  #  - implements TS_EXPRESSION_WITH_TYPE_ARGUMENTS_ARR
+
+OBJ_TYPE.VAR                      #Child of TS_ENTITY_NAME, type 'TSQualifiedName':
+                                  #  - left TS_ENTITY_NAME
+                                  #  - right IDENTIFIER
+
+
+([...]VAR[?]: TYPE,...) => TYPE2  #Child of TS_TYPE, type 'TSFunctionType':
+                                  #  - [parameters IDENTIFIER|REST_ELEMENT_ARR] (parameters, including type assertions)
+                                  #  - [typeAnnotation TS_TYPE_ANNOTATION] (TYPE2)
+new (...) => TYPE2                #Child of TS_TYPE, type 'TSConstructorType':
+                                  #  - [parameters IDENTIFIER|REST_ELEMENT_ARR] (parameters, including type assertions)
+                                  #  - [typeAnnotation TS_TYPE_ANNOTATION] (TYPE2)
+{ FUNC(...)[: TYPE2] }            #Type 'TSMethodSignature':
+                                  #  - key EXPR
+                                  #  - [computed BOOL] (when key is [STR])
+                                  #  - [parameters IDENTIFIER|REST_ELEMENT_ARR]
+                                  #  - [typeAnnotation TS_TYPE_ANNOTATION] (TYPE2)
+{ (...)[: TYPE2], ... }           #Type 'TSCallSignatureDeclaration':
+                                  #  - [parameters IDENTIFIER|REST_ELEMENT_ARR]
+                                  #  - [typeAnnotation TS_TYPE_ANNOTATION] (TYPE2)
+{ new (...)[: TYPE2] }            #Type 'TSConstructSignatureDeclaration':
+                                  #  - [parameters IDENTIFIER|REST_ELEMENT_ARR]
+                                  #  - [typeAnnotation TS_TYPE_ANNOTATION] (TYPE2)
+
+TYPE[]                            #Child of TS_TYPE, type 'TSArrayType':
+                                  #  - elementType TS_TYPE
+...ARR_TYPE                       #Child of TS_TYPE, type 'TSRestType':
+                                  #  - typeAnnotation TS_TYPE
+                                  #for [...ARR_TYPE]
+[TYPE[?],...]                     #Child of TS_TYPE, type 'TSTupleType':
+                                  #  - elementTypes TS_TYPE_ARR
+
+{ readonly ...[: TYPE],... }      #On CLASS_PROPERTY|TS_MAPPED_TYPE|TS_PROPERTY_SIGNATURE|TS_INDEX_SIGNATURE:
+                                  #  - [readonly BOOL]
+
+TYPE | TYPE2                      #Child of TS_TYPE, type 'TSUnionType':
+                                  #  - types TS_TYPE_ARR
+TYPE & TYPE2                      #Child of TS_TYPE, type 'TSIntersectionType':
+                                  #  - types TS_TYPE_ARR
+
+type TYPE<T...> = ...             #Type 'TSTypeParameterDeclaration':
+class CLASS<T...> {}              #  - params TS_TYPE_PARAMETER_ARR
+interface INTERFACE<T,...> {}     #On TS_TYPE_ALIAS_DECLARATION|CLASS_DECLARATION|TS_INTERFACE_DECLARATION|
+[new] <T...>(...) => ...          #TS_FUNCTION_TYPE|TS_CONSTRUCTOR_TYPE|TS_DECLARE_FUNCTION|TS_DECLARE_METHOD|TS_METHOD_SIGNATURE|
+{ FUNC<T...>(...): ... }          #TS_CALL_SIGNATURE_DECLARATION|TS_CONSTRUCT_SIGNATURE_DECLARATION:
+{ [new] <T...>(...): ... }        #  - [typeParameters TS_TYPE_PARAMETER_DECLARATION_ARR] (<...>)
+ T [extends TYPE3][ = TYPE4]      #Type 'TSTypeParameter':
+ T in TYPE3                       #  - [name STR]
+                                  #  - [constraint TYPE3]
+                                  #  - [default TYPE4]
+TYPE<TYPE2_VAR,...>               #Type 'TSTypeParameterInstantiation':
+                                  #  - params TS_TYPE_ARR
+                                  #On TS_TYPE_REFERENCE|TS_EXPRESSION_WITH_TYPE_ARGUMENT:
+                                  #  - [typeParameters TS_TYPE_PARAMETERS_INSTANTIATION]
