--- a/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
+++ b/Languages/Static_analysis/Type_checking/TypeScript/Core/typescript.language.txt
@@ -235,8 +235,8 @@ type TYPE = TYPE2                 #"Type alias"
 typeof VAL                        #Returns its TYPE
                                   #If VAL is CLASS, returns its constructor() FUNC_TYPE (instead of instance OBJ_TYPE)
 
-TYPE extends TYPE2                #If TYPE is covariant to TYPE2, resolves to TYPE3, otherwise TYPE4 ("conditional type")
- ? TYPE3 : TYPE4                  #If TYPE is generic:
+TYPE extends TYPE2 ? TYPE3 : TYPE4#If TYPE is covariant to TYPE2, resolves to TYPE3, otherwise TYPE4 ("conditional type")
+                                  #If TYPE is generic:
                                   #  - results in union of all possible TYPE3|TYPE4 ("distributive conditional type")
                                   #  - transtyped to TYPE & TYPE2 if used inside TYPE3
                                   #TYPE2 can contain "infer T":
@@ -275,9 +275,9 @@ TYPE[TYPE2]                       #UTYPE of TYPE properties values (including me
                                   #  - ARR_TYPE[number]: TYPE of any ARR element
                                   #  - OBJ_TYPE[keyof OBJ_TYPE]: TYPE of any property
 
-{ [T in KUTYPE]: VAL }            #Expanded to OBJ_TYPE ("mapped type") where:
+{ [T in KUTYPE]: TYPE2 }          #Expanded to OBJ_TYPE ("mapped type") where:
                                   #  - keys are each KTYPE in KUTYPE
-                                  #  - VAL can refer to T (current KTYPE)
+                                  #  - TYPE2 can refer to T (current KTYPE)
                                   #Cannot define other properties directly:
                                   #  - but can do it through ... & OBJ_TYPE2
                                   #Often used to map a TYPE using { [P in keyof TYPE]: TYPE[P] }
@@ -286,7 +286,7 @@ TYPE[TYPE2]                       #UTYPE of TYPE properties values (including me
 
 --keyofStringsOnly                #Backward compatibility with TypeScript <=2.9 where KTYPE could not be NUM|SYM_TYPE:
                                   #  - keyof TYPE will ignore them
-                                  #  - { [T in KUTYPE]: VAL } will fail on them
+                                  #  - { [T in KUTYPE]: TYPE2 } will fail on them
                                   #Avoid it since it fails with newer libraries
 
 
@@ -340,8 +340,8 @@ null                              #
 --strictNullChecks                #Unless set, transtype TYPE <-- undefined|null always possible
 NonNullable<TYPE>                 #TYPE minus undefined|null
 
-{ VAR[?]: TYPE,... }              #Many TYPEs and assertions use ? which allows:
-([...]VAR[?]: TYPE,...) => TYPE2  #  - missing values: {} FUNC() []
+{ VAR[?][: TYPE],... }            #Many TYPEs and assertions use ? which allows:
+([...]VAR[?][: TYPE],...) => TYPE2#  - missing values: {} FUNC() []
 [TYPE?,...]                       #     - only way to allow them
                                   #  - undefined: {VAR: undefined} FUNC(undefined) [undefined]
                                   #     - like TYPE|undefined
@@ -367,12 +367,11 @@ number                            #TYPE for any NUM
 string                            #TYPE for any STR
 bigint                            #TYPE for any BIGINT
 symbol                            #TYPE for any SYM
+unique symbol                     #TYPE for any SYM, excluding well-known SYM. Child of symbol
+                                  #Is implied to be const
 
 BOOL|NUM|STR|BIGINT               #TYPE for specific value ("literal type"). Must be literal value.
                                   #Transtyping from BOOL <--> boolean (and others) is "narrowing"|"widening"
-SYM                               #TYPE for specific SYM.
-                                  #TYPE is SYM, but it's printed in error message as "unique symbol".
-                                  #Well-known SYM have type 'symbol' although they should technically be SYM
 
 
                                              /=+===============================+=\
@@ -417,14 +416,14 @@ object                            #TYPE of any OBJ
                                   #Includes Object.create(null)
                                   #Excludes null
 
-{ VAR[?]: TYPE,... }              #TYPE of an OBJ with specific properties
+{ VAR[?][: TYPE],... }            #TYPE of an OBJ with specific properties
                                   #As opposed to object, allows string|number|boolean|symbol|bigint
                                   #  - transtype to new String|Number|Boolean|Symbol|BigInt(), i.e. prototype properties
                                   #Delimiters:
                                   #  - can be , ; or newline
                                   #  - can use trailing delimiters
                                   #No missing properties unless '?'
-{ [VAR: TYPE2]: TYPE, ... }       #TYPE of any OBJ[NUM|STR] ("index type")
+{ [VAR: TYPE2][: TYPE], ... }     #TYPE of any OBJ[NUM|STR] ("index type")
                                   #Also applies to any OBJ.VAR
                                   #TYPE2 is the key type, either:
                                   #  - NUM
@@ -470,7 +469,7 @@ class CLASS                       #CLASS can be used as OBJ_TYPE (of instances)
 {
   constructor(...)                #Constructor return type is always CLASS, i.e. must not be specified.
   constructor                     #When QUAL specified, shortcut to set this.VAR = VAL ("parameter properties")
-   (QUAL VAR[?]: TYPE,...)        #QUAL is public|protected|private|readonly and used like { QUAL VAR }
+   (QUAL VAR[?][: TYPE],...)      #QUAL is public|protected|private|readonly and used like { QUAL VAR }
   [public|protected|private] VAR  #Fields visibility is different than JavaScript:
                                   #  - VAR -> [public] VAR
                                   #  - #VAR -> private VAR
@@ -479,7 +478,8 @@ class CLASS                       #CLASS can be used as OBJ_TYPE (of instances)
 }
 
 abstract CLASS ... {
-  abstract FUNC(...): TYPE        #CLASS that cannot be instantiated (but children can)
+  abstract VAR[: TYPE]
+  abstract FUNC(...)[: TYPE]      #CLASS that cannot be instantiated (but children can)
 }                                 #FUNC with no body, that must be reimplemented by children
 
 CONSTRUCTOR_FUNC                  #Any constructor FUNC can be used as OBJ instance TYPE, just like CLASS.
@@ -516,7 +516,7 @@ CallableFunction                  #Same as Function (child of it) except argumen
 NewableFunction                   #Same but for a constructor.
 --strictBindCallApply             #Make FUNC_TYPEs inherit from CallableFunction|NewableFunction instead of Function
 
-([...]VAR[?]: TYPE,...) => TYPE2  #Type of specific FUNC (child of Function)
+([...]VAR[?][: TYPE],...) => TYPE2#Type of specific FUNC (child of Function)
                                   #TYPE2 is return value.
                                   #No missing arguments unless '?'
                                   #No additional arguments:
@@ -526,11 +526,11 @@ NewableFunction                   #Same but for a constructor.
                                   #  - not when FUNC is transtyped after declaration
                                   #  - not when FUNC(...VAL) is called
                                   #     - but VAL are checked against argument TYPEs
-{ FUNC(...): TYPE2 }              #OBJ.FUNC: shortcut for { FUNC: (...) => TYPE2 }
-{ (...): TYPE2, ... }             #FUNC with OBJ properties
+{ FUNC(...)[: TYPE2] }            #OBJ.FUNC: shortcut for { FUNC: (...) => TYPE2 }
+{ (...)[: TYPE2], ... }           #FUNC with OBJ properties
 
 new (...) => TYPE2                #Require using new FUNC(), i.e. it is a constructor
-{ new (...): TYPE2 }              #Prefer using a CLASS definition
+{ new (...)[: TYPE2] }            #Prefer using a CLASS definition
 
 FUNCTION OVERLOADING ==>          #Can declare several FUNC_TYPEs in a row:
                                   #  - with same name (including none)
@@ -620,10 +620,10 @@ SharedArrayBuffer                 #
                                              \=+===============================+=/
 
 
-{ readonly ...: TYPE,... }        #Shallow immutability (like `const`) of OBJ properties.
+{ readonly ...[: TYPE],... }      #Shallow immutability (like `const`) of OBJ properties.
                                   #Should be specified whenever possible.
 class ...
-  { readonly ...: TYPE,... }      #Same except field is mutable in constructor()
+  { readonly ...[: TYPE],... }    #Same except field is mutable in constructor()
 Readonly<OBJ_TYPE>                #`readonly` to all OBJ properties.
                                   #Does not apply to the OBJ itself.
                                   #Does not work on INTERFACE.
