no commit message

--- a/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
+++ b/Languages/Metaprogramming/Parsing/AST_format/JavaScript/estree.format.txt
@@ -156,18 +156,19 @@ OBJ[VAL]                          #  - object EXPR|SUPER (OBJ)
                                   #  - property EXPR (VAL) or IDENTIFIER (VAR)
                               -set#    or PRIVATE_NAME (#VAR)
                                   #  - computed true (VAL) or false (VAR)
-                                 -#  - optional BOOL (OBJ?.VAR or OBJ?.[VAL])
+OBJ?.VAR                   -seatbm#On MEMBER_EXPRESSION:
+OBJ?.[VAL]                 -seatbm#  - optional BOOL
+                                B##Child of MEMBER_EXPRESSION, type 'OptionalMemberExpression'
+                                B##  - optional BOOL
 
 {VAR, ...}                        #Child of PATTERN, type 'ObjectPattern' (deconstruction):
 {...OBJ, ...}                     #  - properties ARR of either:
                                   #      ASSIGNMENT_PROPERTY (VAR), child of PROPERTY with differences:
                                   #        - value PATTERN
-                                  #        - kind always 'init'
-                                  #        - method always false
-                                  #      REST_ELEMENT (...OBJ)
+                                 s#      REST_ELEMENT (...OBJ)
 
 [VAR,...]                         #Child of PATTERN, type 'ArrayPattern' (deconstruction):
-                                  #  - elements PATTERN_ARR (null for parse array element)
+                                  #  - elements PATTERN_ARR (null for sparse array element)
 
 ...VAR                            #Child of PATTERN, type 'RestElement' (when setting):
                                   #  - argument PATTERN
@@ -416,7 +417,7 @@ class [CLASS] [extends PARENT] {  #  - [id IDENTIFIER]
                                  -#  - computed BOOL
   #VAR|#FUNC()                -set#Type 'PrivateName':
                              -bset#  - name STR
-                             -Bset#  - identifier IDENTIFIER
+                                B##  - identifier IDENTIFIER
 class CLASS ... {}                #Child of CLASS+DECLARATION, type 'ClassDeclaration'
 class [CLASS] ... {}              #Child of CLASS+EXPR, type 'ClassExpression'
 
